--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
     <body>
         <!-- pssst elliott here check out my sick website! -->
-        <h1> Elliott Romano</h1>
-        <h3>welcome to this website!</h3>
+        <h1> Please Leave NOW!</h1>
+        <h3>You are not welcome to this website!</h3>
 
         <div>
             <h3>This is Elliott!</h3>
